2008-07-01  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/videotestsrc/gstvideotestsrc.c:
	(gst_video_test_src_class_init), (gst_video_test_src_init),
	(gst_video_test_src_set_property),
	(gst_video_test_src_get_property), (gst_video_test_src_create):
	* gst/videotestsrc/gstvideotestsrc.h:
	Cleanups, use default property values as defines.
	Add property to enable/disable peer buffer allocation.

2008-06-30  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* tests/check/elements/gdpdepay.c: (gdpdepay_suite):
	* tests/check/pipelines/streamheader.c: (streamheader_suite):
	Enable unit tests on PPC again as the bugs are now fixed.

2008-06-30  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst-libs/gst/riff/riff-ids.h:
	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_audio_caps),
	(gst_riff_create_audio_template_caps):
	Add support for ADPCM IMA DK3 and DK4 variant in RIFF containers.
	Fixes bug #540351.

2008-06-30  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/ffmpegcolorspace/gstffmpegcodecmap.c:
	(gst_ffmpeg_pixfmt_to_caps):
	* gst/ffmpegcolorspace/gstffmpegcolorspace.c:
	(gst_ffmpegcsp_get_unit_size):
	Only set/get on the PAL8 format, ffmpegcolorspace doesn't support
	it on other formats. Also adjust the unit size only for that format
	to not include the palette. Fixes bug #540497.

2008-06-29  Stefan Kost  <ensonic@users.sf.net>

	* gst/adder/gstadder.c:
	  Use GST_DEBUG_FUNCPTR and remove some extra vlnak lines.

2008-06-27  Stefan Kost  <ensonic@users.sf.net>

	* ChangeLog:
	  ChangeLog surgery.
  
	* tests/examples/seek/seek.c:
	  Move variable into ifdef too.
	

2008-06-27  Stefan Kost  <ensonic@users.sf.net>

	* tests/examples/seek/seek.c:
	  Include config.h and check if we have X. Remove XInitThread(), don't
	  think its needed. Fixes: #540334.

2008-06-26  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Sam Morris <sam at robots dot org to uk>

	* gst-libs/gst/interfaces/mixertrack.c: